@@ -986,7 +986,8 @@ _interpret_sensor_oem_supermicro (ipmi_interpret_ctx_t ctx)
   /* Supermicro CPU Temperature Sensor
    * X7DBR-3/X7DB8/X8DTN/X7SBI-LN4/X8DTH/X8DTG/X8DTU/X8DT3-LN4F/X8DTU-6+/X8DTL/X8DTL-3F/X8SIL-F/X9SCL/X9SCM/X8DTN+-F/X8SIE/X9SCA-F-O
    *
-   * Manufacturer ID = 10437 (Peppercon, IPMI card manufacturer), 47488 (Supermicro, not IANA number, special case)
+   * Manufacturer ID = 10876 (Supermicro), 10437 (Peppercon, IPMI card manufacturer),
+   *                   47488 (Supermicro, not IANA number, special case)
    *                   5593 (Magnum Technologies, rebranded Supermicro board)
    * Product ID = 4 (X7DBR-3, X7DB8, X8DTN, X7SBI-LN4 / X7SBI_LN4), 43707 (X8DTH, X8DTG, X8DTU, X8DT3-LN4F / X8DT3_LN4F), 1549 (X8DTU-6+ / X8DTU_6PLUS),
    *              6 (X8DTL, X8DTL-3F / X8DTL_3F), 1541 (X8SIL-F), 1572 (X9SCL, X9SCM), 1551 (X8DTN+-F / X8DTNPLUS_F), 1037 (X8SIE),
@@ -999,6 +1000,11 @@ _interpret_sensor_oem_supermicro (ipmi_interpret_ctx_t ctx)
    * Value 0x0004 = "Overheat"
    * Value 0x0007 = "Not Installed"
    */
+
+  if (_interpret_sensor_oem_discrete_cpu_temp (ctx,
+                                               IPMI_IANA_ENTERPRISE_ID_SUPERMICRO,
+					       __IPMI_SUPERMICRO_PRODUCT_ID_X9SC) < 0)
+    return (-1);
 
   if (_interpret_sensor_oem_discrete_cpu_temp (ctx,
                                                IPMI_IANA_ENTERPRISE_ID_PEPPERCON,
