@@ -1,3 +1,7 @@
+2011-11-14  Albert Chu <chu11@llnl.gov>
+
+	* Support Supermicro X9SCM-F IANA change.
+	
 2011-11-08  Albert Chu <chu11@llnl.gov>
 
 	* Support Supermicro X9SCA-F-O OEM sensors.
